Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,6 +25,7 @@ variables:
   sonarJavaSource: '.'
   sonarJavaBinaries: '.'
   sonar.branch.name: 'master'
+  sonar.verbose: 'true'
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
   #Build Artifacts
