--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,6 +25,7 @@ variables:
   sonarJavaSource: '.'
   sonarJavaBinaries: '.'
   sonar.verbose: 'true'
+  sonar.branch: 'master'
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
   #Build Artifacts
