--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -24,6 +24,7 @@ variables:
   sonarSources: '.'
   sonarJavaSource: '.'
   sonarJavaBinaries: '.'
+  sonar.verbose: 'true'
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
   #Build Artifacts
