Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -11,12 +11,7 @@ trigger:
   paths:
     exclude:
     - README.md
-pr:
-  branches:
-    include:
-    - '*'
-    exclude:
-    - 'refs/tags/*'
+pr: none
 variables:
   sonarServiceConnection: 'sonar-ahold'
   sonarProjectKey: 'jpetstore'
