--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -5,10 +5,7 @@ trigger:
   batch: true
   branches:
     include:
-    - master/*
-  paths:
-    exclude:
-    - README.md
+    - master
 pr: none
 variables:
   sonarServiceConnection: 'sonar-ahold'
